[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Level2.gd" type="Script" id=1]
[ext_resource path="res://Art/tiles/Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/dialogue_system/dialogue_system.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Background/Graminha1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Monsters/Father.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Monsters/Mother.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/PlayerV2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Monsters/OrangeSpirit.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Monsters/GreenSpikey.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Background/Florzinha1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/DialogueTrigger.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFontData" id=2]

hinting = 2
font_path = "res://fonts/SourceCodePro-Black.ttf"

[sub_resource type="DynamicFont" id=3]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Level2" type="Node2D"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

position = Vector2( -100, 0 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 10, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 10, 0, -2, 8, 0, -1, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 9, 0, -65532, 8, 0, -65531, 24, 0, -65530, 24, 0, -65529, 24, 0, -65528, 8, 0, -65527, 24, 0, -65526, 8, 0, -65525, 8, 0, -65524, 10, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 10, 0, 65534, 24, 0, 65535, 24, 0, 0, 8, 0, 1, 9, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 24, 0, 6, 9, 0, 7, 8, 0, 8, 9, 0, 9, 8, 0, 10, 24, 0, 11, 8, 0, 12, 10, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 10, 0, 131070, 8, 0, 131071, 9, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 9, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 9, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 10, 0, 65549, 0, 0, 65550, 0, 0, 196600, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 10, 0, 196606, 24, 0, 196607, 24, 0, 131072, 24, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 24, 0, 131077, 24, 0, 131078, 9, 0, 131079, 8, 0, 131080, 8, 0, 131081, 9, 0, 131082, 8, 0, 131083, 8, 0, 131084, 10, 0, 131085, 0, 0, 131086, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 10, 0, 262142, 9, 0, 262143, 9, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 24, 0, 196612, 24, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 10, 0, 196621, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 8, 0, 327679, 8, 0, 262144, 8, 0, 262145, 24, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 9, 0, 262150, 24, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 0, 0, 262157, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 9, 0, 393215, 8, 0, 327680, 9, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 24, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 9, 0, 327690, 8, 0, 327691, 8, 0, 327692, 0, 0, 458742, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 8, 0, 458751, 8, 0, 393216, 9, 0, 393217, 8, 0, 393218, 9, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 9, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720909, 0, 0, 720912, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786447, 0, 0, 786448, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851973, 0, 0, 851974, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851982, 0, 0, 851983, 0, 0, 917504, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983047, 0, 0, 983048, 0, 0 )
_sections_unfolded = [ "Cell" ]

[node name="PlayerInterface" type="CanvasLayer" parent="." index="1"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Interface" parent="PlayerInterface" index="0" instance=ExtResource( 3 )]

[node name="dialogue_system" parent="." index="2" instance=ExtResource( 4 )]

wich_area = 2

[node name="YSort" type="YSort" parent="." index="3"]

sort_enabled = true
_sections_unfolded = [ "Sort", "Transform", "Z Index" ]

[node name="Graminha1" parent="YSort" index="0" instance=ExtResource( 5 )]

position = Vector2( 380, 160 )

[node name="Graminha2" parent="YSort" index="1" instance=ExtResource( 5 )]

position = Vector2( 1000, 630 )

[node name="Graminha3" parent="YSort" index="2" instance=ExtResource( 5 )]

position = Vector2( 130, 550 )

[node name="Father" parent="YSort" index="3" instance=ExtResource( 6 )]

position = Vector2( 937.04, 285.824 )

[node name="Mother" parent="YSort" index="4" instance=ExtResource( 7 )]

position = Vector2( 78.9985, 252.32 )

[node name="PlayerV2" parent="YSort" index="5" instance=ExtResource( 8 )]

position = Vector2( 507.843, 350.255 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "collision" ]

[node name="MotherSide" type="YSort" parent="YSort" index="6"]

editor/display_folded = true
sort_enabled = true

[node name="OrangeSpirit" parent="YSort/MotherSide" index="0" instance=ExtResource( 9 )]

position = Vector2( 130, 390 )

[node name="OrangeSpirit12" parent="YSort/MotherSide" index="1" instance=ExtResource( 9 )]

position = Vector2( 230, 150 )

[node name="OrangeSpirit13" parent="YSort/MotherSide" index="2" instance=ExtResource( 9 )]

position = Vector2( 140, 180 )

[node name="OrangeSpirit14" parent="YSort/MotherSide" index="3" instance=ExtResource( 9 )]

position = Vector2( 240, 440 )

[node name="FatherSide" type="YSort" parent="YSort" index="7"]

editor/display_folded = true
sort_enabled = true

[node name="GreenSpikey" parent="YSort/FatherSide" index="0" instance=ExtResource( 10 )]

position = Vector2( 910, 440 )

[node name="GreenSpikey8" parent="YSort/FatherSide" index="1" instance=ExtResource( 10 )]

position = Vector2( 810, 160 )

[node name="GreenSpikey9" parent="YSort/FatherSide" index="2" instance=ExtResource( 10 )]

position = Vector2( 890, 220 )

[node name="GreenSpikey10" parent="YSort/FatherSide" index="3" instance=ExtResource( 10 )]

position = Vector2( 830, 500 )

[node name="Florzinha1" parent="YSort" index="8" instance=ExtResource( 11 )]

position = Vector2( 340, 630 )

[node name="Florzinha2" parent="YSort" index="9" instance=ExtResource( 11 )]

position = Vector2( 290, 620 )

[node name="Florzinha3" parent="YSort" index="10" instance=ExtResource( 11 )]

position = Vector2( 250, 630 )

[node name="DialogueTrigger" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 570, 290 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger" index="0"]

position = Vector2( -70, 60 )
scale = Vector2( 5.88462, 20.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerInterface" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Interface" type="Label" parent="TimerInterface" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="body_entered" from="DialogueTrigger" to="dialogue_system" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="DialogueTrigger" to="." method="_on_DialogueTrigger_body_entered"]

[connection signal="body_entered" from="DialogueTrigger" to="DialogueTrigger" method="_on_DialogueTrigger_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


